# PS_JAVA

./: README.md  pom.xml
BasicWork3/PhoneVerification/: PhoneValidator.java  readme.md
BasicWork3/TextFunction/: TextCleaner.java  readme.md
CollectionsArrayListAndLinkedList/: GetRolling.java  Main.java  Readme.md
CreateCircle/: Circle.java  Main.java  TestCircle.java  readme.md
CreditCalculator/: readme.md
FilesAndNetworkAssembly/: EchoClient.java  EchoServer.java
HomeWorkBasic/: Main.java  readme.md
IntroductionToAlgorithms/: Main.java  Readme.md
Library CLI App/: pom.xml  readme.md
PracticalWorkNumberThree/: FamilyMember.java  HTMLValidator.java  MusicPlaylist.java  readme.md
SmartHome/: Controllable.java  Main.java  RoomType.java  SmartDevice.java  SmartHome.java  SmartLight.java  SmartTV.java  SmartThermostat.java  readme.md
TripScheduler/: Destination.java  Main.java  Serializable.java  TransportType.java  Trip.java  TripJsonStorage.java  TripStorage.java  User.java
basics of Java testing/: pom.xml  readme.md
bazel-string-reverser/: BUILD.bazel  MODULE.bazel  readme.md
bazel-string-reverser/app/: BUILD.bazel
bazel-string-reverser/app/src/main/java/com/example/: App.java
bazel-string-reverser/mylib/: BUILD.bazel
bazel-string-reverser/mylib/src/main/java/com/example/mylib/: TextFormatter.java
cucumber-bdd-homework/: pom.xml  readme.md
gradle-string-reverser/: readme.md  settings.gradle
maven-string-reverser/: pom.xml  readme.md
practiceworkNumberTwo/: GuessNumber.java  MultiplicationTable.java  TimeOfDay.java
(+140 files in other folders)
